# dingtalk-stream-sdk-rust

./: .gitignore  Cargo.toml  README.md  README.zh_cn.md
examples/: hello.rs  reply_message.rs
src/: client.rs  constants.rs  credential.rs  frames.rs  handlers.rs  lib.rs  utils.rs
src/client/: dingtalk_stream.rs  mod.rs
src/client/dingtalk_stream/: lifecycle.rs  mod.rs
src/client/stream_/: access_token.rs  download_resources.rs  handle_message.rs  lifecycle.rs  mod.rs  send_message.rs  upload_resources.rs
src/frames/: callback_message.rs  down_stream_message.rs  event_message.rs  mod.rs  robot_message.rs  system_message.rs
src/frames/down_message/: callback_message.rs  event_message.rs  mod.rs  system_message.rs
src/frames/down_stream_message/: callback_message.rs  event_message.rs  mod.rs  system_message.rs
src/frames/up_message/: callback_message.rs  mod.rs
src/frames/up_stream_message/: callback_message.rs  mod.rs  robot_message.rs
test_resources/: cb_msg_file.json  cb_msg_picture.json  cb_msg_rich_text.json  cb_msg_text.json  client_downstream_msg.json
