[package]
name = "dingtalk-stream-sdk"
version = "0.2.0"
edition = "2021"
description = "DingTalk Stream SDK for Rust"
license = "MIT"
authors = ["DingTalk"]
repository = "https://github.com/wenhaozhao/dingtalk-stream-sdk-rust"

[dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
async-trait = "0.1"
chrono = { version = "0.4" }
md5 = { version = "0.8" }
image = { version = "0.25", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
default = ["rustls-tls-native-roots"]

[lib]
name = "dingtalk_stream"
path = "src/lib.rs"

[[example]]
name = "hello"
path = "examples/hello.rs"