[package]
name = "dingtalk-stream-sdk"
version = "0.2.2"
edition = "2021"
description = "DingTalk Stream SDK for Rust"
license = "MIT"
authors = ["DingTalk"]
repository = "https://github.com/wenhaozhao/dingtalk-stream-sdk-rust"


[lib]
name = "dingtalk_stream"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4" }
anyhow = { version = "1.0" }
tokio = { version = "1.51", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5" }
async-trait = "0.1"
chrono = { version = "0.4" }
md5 = { version = "0.8" }
image = { version = "0.25", optional = true }

[dev-dependencies]
env_logger = { version = "0.11" }

[features]
default = []


[[example]]
name = "hello"
path = "examples/hello.rs"